add local execution